--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,13 @@
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
+        "spryker/container": "*",
         "spryker/oauth-user-connector": "*",
         "spryker/propel": "*",
-        "spryker/testify": "*"
+        "spryker/store": "*",
+        "spryker/store-extension": "*",
+        "spryker/testify": "*",
+        "spryker/zed-request-extension": "*"
     },
     "autoload": {
         "psr-4": {
