CC-31953 Introduced a basic infrastructure for the Glue BAPI E2E testing. (#10691)
CC-31953 Introduced a basic infrastructure for the Glue BAPI E2E testing.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Spryker\\": "src/Spryker/"
+            "Spryker\\": "src/Spryker/",
+            "SprykerTest\\Shared\\AuthenticationOauth\\Helper\\": "tests/SprykerTest/Shared/AuthenticationOauth/_support/Helper/"
         }
     },
     "autoload-dev": {
