FRW-9592: Fixed module codecept configuration

--- a/codeception.yml
+++ b/codeception.yml
@@ -1,5 +1,7 @@
 namespace: AuthenticationOauth
-actor: Tester
+include:
+    - tests/SprykerTest/Zed/AuthenticationOauth
+    - tests/SprykerTest/Client/AuthenticationOauth
 paths:
     tests: tests
     output: tests/_output
