FRW-10361 Introduced Multi-Factor Authentication for Backend API and Storefront API. (#11580)
FRW-10361 Introduced Multi-Factor Authentication for Backend API and Storefront API.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/container": "*",
+        "spryker/currency": "*",
         "spryker/oauth-user-connector": "*",
         "spryker/propel": "*",
         "spryker/store": "*",
